fixed issues with favoriting front end

--- a/views/pages/account.ejs
+++ b/views/pages/account.ejs
@@ -19,6 +19,11 @@
     <% include ../partials/notification %>
     <div class="container-fluid">
         <div class="container border rounded">
+            <h1>Favorited Courses</h1>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="container border rounded">
             <h1 id="completed-courses-header">Save Your Completed Courses*</h1>
             <h4>Save completed courses to filter search results by fulfilled prerequisites!</h4>
             <span>* Updating your completed courses will overwrite ALL your previously saved completed courses</span>
