--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -42,8 +42,8 @@
                     <span class="fav-course">
                         <%
                         if (user) {
-                            console.log(favCourses);
-                            console.log(favCourses[0].courses.includes(courseFullNumber));
+//                            console.log(favCourses);
+//                            console.log(favCourses[0].courses.includes(courseFullNumber));
                             // probably not the most effecient implementation
                             if (favCourses && favCourses[0] && favCourses[0].courses && favCourses[0].courses.includes(courseFullNumber)) { %>
                                 <i class="fas fa-heart"></i>
