--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
     <div class="credits">
-        Made with <span style="color: #e25555;">&#9829;</span> by <span class="bold">Will</span> and <span class="bold">Ray</span>
+        Made with <span style="color: #e25555;">&#9829;</span> by <a href="https://github.com/wwang99/" target="_blank" class="bold">Will</a> and <a href="https://github.com/fireteam99/" target="_blank" class="bold">Ray</a>
         <br>
         <a href="https://github.com/wwang99/course-searcher" target="_blank">GitHub Repo</a>
     </div>
