favorite courses now show up on account page

--- a/public/css/account.css
+++ b/public/css/account.css
@@ -144,3 +144,11 @@ h6 {
         width: 100%;
     }
 }
+
+.favorited-courses {
+    margin-top: 2em;
+}
+
+.favorited-courses-link {
+    color: #1768AC;
+}
