--- a/views/pages/account.ejs
+++ b/views/pages/account.ejs
@@ -1,150 +1,168 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title>Rutgers Course Searcher++ | Account</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/css/resources.css">
-    <link rel="stylesheet" type="text/css" href="/css/navbar.css">
-    <link rel="stylesheet" type="text/css" href="/css/account.css">
-</head>
+    <head>
+        <title>Rutgers Course Searcher++ | Account</title>
+        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="/css/resources.css">
+        <link rel="stylesheet" type="text/css" href="/css/navbar.css">
+        <link rel="stylesheet" type="text/css" href="/css/account.css">
+    </head>
 
-<body>
-    <header>
-        <% include ../partials/navbar %>
-    </header>
-    <% include ../partials/notification %>
-    <div class="container-fluid">
-        <div class="container border rounded">
-            <h1>Favorited Courses</h1>
-        </div>
-    </div>
-    <div class="container-fluid">
-        <div class="container border rounded">
-            <h1 id="completed-courses-header">Save Your Completed Courses*</h1>
-            <h4>Save completed courses to filter search results by fulfilled prerequisites!</h4>
-            <span>* Updating your completed courses will overwrite ALL your previously saved completed courses</span>
-            <div class="upload border rounded">
-                <h5 class="bold">Upload your unofficial transcript to automatically fill in your courses. You can also manually type in your courses yourself if you do not wish to upload your transcript. Use the template below or it will not be saved properly. </h5>
-                <form action="/account" method="post" enctype="multipart/form-data" id="upload-auto-form">
-                    <input id="transcript-upload" name="transcript" type="file" accept="application/pdf" required/>
-                    <button type="reset" class="btn btn-outline-primary" data-dismiss="reset">Cancel</button>
-                    <button type="submit" class="btn btn-primary">Upload</button>
-                </form>
-            </div>
-            <div>
-                <div class="template">
-                    <div class="tut-aside">
-                        <div>
-                            <h6>Template</h6>
-                            <p>
-                                Semester Name <br>
-                                -(1:111:111) COURSE NAME <br>
-                                -(2:222:222) COURSE NAME <br>
-                                Semester Name <br>
-                                -(3:333:333) COURSE NAME <br>
-                                -(4:444:444) COURSE NAME <br>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="tut-aside">
-                        <div>
-                            <h6>Example</h6>
-                            <p>
-                                Spring 2018 <br>
-                                -(33:010:272) INTRO FINANCIAL ACCT <br>
-                                Fall 2019 <br>
-                                -(33:010:451) COST ACCOUNTING <br>
-                                -(01:013:192) ELEMENTARY TWI I
-                            </p>
-                        </div>
-                    </div>
+    <body>
+        <header>
+            <% include ../partials/navbar %>
+        </header>
+        <% include ../partials/notification %>
+        <div class="container-fluid">
+            <div class="container border rounded">
+                <h1 id="completed-courses-header">Save Your Completed Courses*</h1>
+                <h4>Save completed courses to filter search results by fulfilled prerequisites!</h4>
+                <span>* Updating your completed courses will overwrite ALL your previously saved completed courses</span>
+                <div class="upload border rounded">
+                    <h5 class="bold">Upload your unofficial transcript to automatically fill in your courses. You can also manually type in your courses yourself if you do not wish to upload your transcript. Use the template below or it will not be saved properly. </h5>
+                    <form action="/account" method="post" enctype="multipart/form-data" id="upload-auto-form">
+                        <input id="transcript-upload" name="transcript" type="file" accept="application/pdf" required/>
+                        <button type="reset" class="btn btn-outline-primary" data-dismiss="reset">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Upload</button>
+                    </form>
                 </div>
-                <form action="/account" method="post" id="upload-form">
-                    <%
-                    let str = '';
-                    if (form) {
-                        form.forEach(semester => {
-                            str += semester[0] + '&#013;';
-                            semester[1].forEach(course => {
-                                str += `-(${course.id}) ${course.name}&#013;`;
+                <div>
+                    <div class="template">
+                        <div class="tut-aside">
+                            <div>
+                                <h6>Template</h6>
+                                <p>
+                                    Semester Name <br>
+                                    -(1:111:111) COURSE NAME <br>
+                                    -(2:222:222) COURSE NAME <br>
+                                    Semester Name <br>
+                                    -(3:333:333) COURSE NAME <br>
+                                    -(4:444:444) COURSE NAME <br>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="tut-aside">
+                            <div>
+                                <h6>Example</h6>
+                                <p>
+                                    Spring 2018 <br>
+                                    -(33:010:272) INTRO FINANCIAL ACCT <br>
+                                    Fall 2019 <br>
+                                    -(33:010:451) COST ACCOUNTING <br>
+                                    -(01:013:192) ELEMENTARY TWI I
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <form action="/account" method="post" id="upload-form">
+                        <%
+                        let str = '';
+                        if (form) {
+                            form.forEach(semester => {
+                                str += semester[0] + '&#013;';
+                                semester[1].forEach(course => {
+                                    str += `-(${course.id}) ${course.name}&#013;`;
+                                });
                             });
-                        });
-                        str = str.trim();
-                    }
-                    %>
-                    <textarea class="manual-add" name="courses" type="text" placeholder="Enter the semester names, course numbers, and course names of the courses you took that semester. Follow the template above!!" required><%- str %></textarea>
-                    <br>
-                    <button type="reset" class="btn btn-outline-primary btn-lg cancel-button" data-dismiss="reset">Cancel</button>
-                    <button type="submit" class="btn btn-primary btn-lg submit-button">Save Changes</button>
-                </form>
+                            str = str.trim();
+                        }
+                        %>
+                        <textarea class="manual-add" name="courses" type="text" placeholder="Enter the semester names, course numbers, and course names of the courses you took that semester. Follow the template above!!" required><%- str %></textarea>
+                        <br>
+                        <button type="reset" class="btn btn-outline-primary btn-lg cancel-button" data-dismiss="reset">Cancel</button>
+                        <button type="submit" class="btn btn-primary btn-lg submit-button">Save Changes</button>
+                    </form>
+                </div>
             </div>
-        </div>
+
+            <div class="favorited-courses">
+                <div class="card">
+                    <div class="card-header">
+                        Favorited Courses
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <%
+                        let favC = favCourses[0].courses;
+                        if (favC === undefined || favC.length === 0) { %>
+                        <li class="list-group-item">No favorited courses yet</li>
+                        <%
+                        } else {
+                            for (course of favC) { %>
+                        <li class="list-group-item"><a class="favorited-courses-link" href="/course?id=<%= course %>"><%= course %></a></li>
+                        <%
+                        }    
+                        }
+                            %>
+                    </ul>
+                </div>
+            </div>
 
 
-        <div class="username-header">
-            <h1>My Completed Courses</h1>
-        </div>
-        <div class="semesters-container">
-            <%
+
+            <div class="username-header">
+                <h1>My Completed Courses</h1>
+            </div>
+            <div class="semesters-container">
+                <%
                 // check if semesters is empty or not
                 if (!(Object.keys(semesters).length === 0 && semesters.constructor === Object)) {
                     Object.keys(semesters).forEach(function(semesterName) {
-            %>
-                        <div class="semester">
-                            <h2><%= semesterName %></h2>
-                            <ul>
-            <%
+                        %>
+                <div class="semester">
+                    <h2><%= semesterName %></h2>
+                    <ul>
+                        <%
                         for (let i = 0; i < semesters[semesterName].length; i++) {
-            %>
-                                <li><%= semesters[semesterName][i] %></li>
-            <%
+                            %>
+                        <li><%= semesters[semesterName][i] %></li>
+                        <%
                         }
-            %>
-                            </ul>
-                        </div>
-            <%
-                    });
+                            %>
+                    </ul>
+                </div>
+                <%
+                });
                 } else {
-            %>
-                    <h3>No saved completed courses yet!</h3>
-            <%
+                    %>
+                <h3>No saved completed courses yet!</h3>
+                <%
                 }
-            %>
-        </div>
-        <div class="delete-account">
-            <button type="button" class="btn btn-lg btn-danger" data-toggle="modal" data-target="#deleteAccount">Delete Account <i class="far fa-trash-alt"></i></button>
+                    %>
+            </div>
+            <div class="delete-account">
+                <button type="button" class="btn btn-lg btn-danger" data-toggle="modal" data-target="#deleteAccount">Delete Account <i class="far fa-trash-alt"></i></button>
 
-            <div class="modal fade" id="deleteAccount" tabindex="-1" role="dialog" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title">Confirm Account Deletion</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <p>Are you sure you want to delete your account? <br> Doing so will delete everything associated with your account, including saved courses and posted comments.</p>
-                        </div>
-                        <div class="modal-footer">
-                            <form action="/account" method="post">
-                                <input type="hidden" name="deleteAccount" value="true">
-                                <button type="button" class="btn btn-outline-primary" data-dismiss="modal">Cancel</button>
-                                <button type="submit" class="btn btn-danger">Confirm Delete <i class="far fa-trash-alt"></i></button>
-                            </form>
+                <div class="modal fade" id="deleteAccount" tabindex="-1" role="dialog" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Confirm Account Deletion</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Are you sure you want to delete your account? <br> Doing so will delete everything associated with your account, including saved courses and posted comments.</p>
+                            </div>
+                            <div class="modal-footer">
+                                <form action="/account" method="post">
+                                    <input type="hidden" name="deleteAccount" value="true">
+                                    <button type="button" class="btn btn-outline-primary" data-dismiss="modal">Cancel</button>
+                                    <button type="submit" class="btn btn-danger">Confirm Delete <i class="far fa-trash-alt"></i></button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-</body>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    </body>
 
 </html>
